--- a/styles/common.scss
+++ b/styles/common.scss
@@ -566,6 +566,7 @@
       font-size: 1.3rem;
       right: .8rem;
       bottom: .8rem;
+      z-index: 4;
       &:hover {
         cursor: pointer;
       }
@@ -576,12 +577,19 @@
     }
     .custom-file-input {
       position: absolute;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
     }
     img {
       position: absolute;
       left: 0;
       width: 100%;
       height: 100%;
+      z-index: 3;
     }
   }
 }
